--- a/css/style.css
+++ b/css/style.css
@@ -3734,11 +3734,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   align-items: center;
 }
 .home-banner ul img {
-  border: 50px solid #fff;
+  /* border: 50px solid #fff; */
   /* border-radius: 3px; */
   /* box-shadow: 0 0 5px 0 hsla(0,0%,30%, .3); */
   max-width: 100%;
   height: 100vh;
+  object-fit: contain;
 }
 .home-banner ul li:nth-child(4) {
   animation: xfade 16s 0s infinite;
