--- a/css/style.css
+++ b/css/style.css
@@ -244,109 +244,6 @@ a:focus {
   overflow: hidden;
 }
 
-/* Dropcap */
-.dropcap {
-  font-size: 48px;
-  line-height: 60px;
-  padding: 0 7px;
-  display: inline-block;
-  font-weight: 700;
-  margin: 5px 15px 5px 0;
-  position: relative;
-  text-transform: uppercase;
-}
-
-.dropcap.primary {
-  background: #ffb600;
-  color: #fff;
-}
-
-.dropcap.secondary {
-  background: #3a5371;
-  color: #fff;
-}
-
-/* Title */
-.title {
-  font-size: 32px;
-  line-height: 36px;
-  margin-bottom: 20px;
-}
-
-/* Title Border */
-/* Section title */
-.section-title {
-  font-size: 18px;
-  line-height: 28px;
-  margin: 0;
-  text-transform: uppercase;
-  font-weight: 300;
-}
-
-.section-sub-title {
-  font-weight: 900;
-  font-size: 36px;
-  line-height: 46px;
-  margin: 0 0 60px;
-  color: #212121;
-}
-
-@media (max-width: 575px) {
-  .section-sub-title {
-    font-size: 28px;
-    margin: 0 0 20px;
-  }
-}
-
-/* Column title */
-.column-title {
-  margin: 0 0 40px;
-}
-
-.column-title-small {
-  font-size: 20px;
-  margin: 0 0 25px;
-}
-
-/* Page content title */
-.page-content-title.first {
-  margin-top: 0;
-}
-
-/* Video responsive */
-.embed-responsive {
-  padding-bottom: 56.25%;
-  position: relative;
-  display: block;
-  height: 0;
-  overflow: hidden;
-}
-
-.embed-responsive iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 0;
-}
-
-/* Input form */
-.form-control {
-  box-shadow: none;
-  border: 1px solid #dadada;
-  padding: 5px 20px;
-  height: 44px;
-  background: none;
-  color: #959595;
-  font-size: 14px;
-  border-radius: 0;
-}
-
-.form-control:focus {
-  box-shadow: none;
-  border: 1px solid #ffb600;
-}
 
 hr {
   background-color: #e7e7e7;
@@ -355,76 +252,6 @@ hr {
   margin: 40px 0;
 }
 
-.alert hr {
-  background: initial;
-  margin: initial;
-  border-top: 1px solid;
-  height: initial;
-  margin-bottom: 1rem;
-  opacity: 0.2;
-}
-
-blockquote {
-  padding: 25px;
-  margin: 20px 0;
-  background: #f9f9f9;
-  position: relative;
-  border-left: 3px solid #ffb600;
-  padding-left: 40px;
-}
-
-blockquote.text-center {
-  border-top: 3px solid #ffb600;
-  border-left: 0;
-  padding-left: 25px;
-  padding-top: 50px;
-}
-
-blockquote.text-center:before {
-  left: 50%;
-  top: 10px;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-}
-
-blockquote.text-right {
-  border-right: 3px solid #ffb600;
-  padding-right: 40px;
-  border-left: 0;
-  padding-left: 25px;
-}
-
-blockquote.text-right:before {
-  left: auto;
-  right: 5px;
-}
-
-blockquote:before {
-  content: "\f10d";
-  font-family: "Font Awesome 5 Free";
-  position: absolute;
-  font-size: 28px;
-  color: #e5e5e5;
-  top: 5px;
-  left: 5px;
-  font-weight: 700;
-  z-index: 0;
-}
-
-blockquote p {
-  font-size: 14px;
-  line-height: 22px;
-  position: relative;
-  z-index: 1;
-  font-style: italic;
-  margin-bottom: 0;
-}
-
-cite {
-  display: block;
-  font-size: 14px;
-  margin-top: 10px;
-}
 
 /* Ul, Ol */
 .list-round,
@@ -1538,270 +1365,7 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
   margin: -20px;
 }
 
-/* Intro
-================================================== */
-/* Intro */
-.ts-intro {
-  padding-right: 20px;
-}
 
-.into-title {
-  font-weight: 300;
-  text-transform: uppercase;
-  font-size: 18px;
-  line-height: normal;
-  margin: 0;
-}
-
-.into-sub-title {
-  font-weight: 900;
-  text-transform: uppercase;
-  font-size: 32px;
-  line-height: normal;
-  margin: 10px 0;
-}
-
-/*-- Featured Tab --*/
-.featured-tab {
-  padding-left: 15px;
-}
-
-.featured-tab .nav-tabs {
-  border: 0;
-}
-
-.featured-tab .nav-tabs > li > a {
-  font-family: "Roboto Slab", serif;
-  background: #272d33;
-  color: #fff;
-  text-shadow: none;
-  font-weight: 700;
-  border-radius: 0;
-  text-transform: uppercase;
-  line-height: 50px;
-  margin: 0 1px 20px;
-  padding: 0 20px;
-  border: 0 !important;
-  transition: all 300ms ease;
-}
-
-.featured-tab .tab-content {
-  border-top: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
-.featured-tab .nav.nav-tabs {
-  margin-bottom: 10px;
-}
-
-.featured-tab .nav-tabs > li.active > a {
-  color: #fff;
-  background: #ffb600;
-  position: relative;
-}
-
-.featured-tab .nav-tabs > li.active > a:after {
-  position: absolute;
-  content: " ";
-  width: auto;
-  height: auto;
-  bottom: -20px;
-  left: 50%;
-  border-width: 10px;
-  border-style: solid;
-  border-color: #ffb600 rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-}
-
-.featured-tab .lead {
-  font-size: 18px;
-  line-height: 28px;
-  color: #303030;
-  font-weight: 400;
-}
-
-.featured-tab .tab-pane img.pull-left {
-  margin: 0 30px 10px 0;
-}
-
-.featured-tab .tab-pane img.pull-right {
-  margin: 0 0 0 30px;
-}
-
-.featured-tab .tab-icon i {
-  font-size: 230px;
-}
-
-.tab-image-content {
-  padding-left: 0;
-}
-
-.featured-tab .border-title.border-left {
-  display: inline-block;
-  margin-bottom: 25px;
-  font-size: 20px;
-}
-
-/* Tab services */
-.featured-tab.tab-services .nav-tabs > li > a {
-  font-size: 14px;
-  padding: 0 21px;
-  text-transform: capitalize;
-}
-
-.featured-tab.tab-services .nav.nav-tabs {
-  margin-bottom: 20px;
-}
-
-/* Projects area
-================================================== */
-/* Project filter nav */
-.shuffle-btn-group {
-  display: inline-block;
-  margin: 20px 0 50px;
-  width: 100%;
-  text-align: center;
-  /* border-bottom: 3px solid #ffb600; */
-}
-
-.shuffle-btn-group label {
-  display: inline-block;
-  color: #212121;
-  font-size: 14px;
-  padding: 6px 25px;
-  padding-top: 10px;
-  font-weight: 700;
-  text-transform: uppercase;
-  transition: all 0.3s;
-  cursor: pointer;
-  margin: 0;
-}
-
-.shuffle-btn-group label.active {
-  color: #212121;
-  background: #ffb600;
-}
-
-.shuffle-btn-group label input {
-  display: none;
-}
-
-/* Project shuffle Item */
-.shuffle-item {
-  padding: 0;
-}
-
-.shuffle-item .project-img-container {
-  position: relative;
-  overflow: hidden;
-}
-
-.shuffle-item .project-img-container img {
-  -webkit-transform: perspective(1px) scale3d(1.1, 1.1, 1);
-  transform: perspective(1px) scale3d(1.1, 1.1, 1);
-  transition: all 400ms;
-}
-
-.shuffle-item .project-img-container:hover img {
-  -webkit-transform: perspective(1px) scale3d(1.15, 1.15, 1);
-  transform: perspective(1px) scale3d(1.15, 1.15, 1);
-}
-
-.shuffle-item .project-img-container:after {
-  opacity: 0;
-  position: absolute;
-  content: "";
-  top: 0;
-  right: auto;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  transition: all 400ms;
-}
-
-.shuffle-item .project-img-container:hover:after {
-  opacity: 1;
-}
-
-.shuffle-item .project-img-container .gallery-popup .gallery-icon {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 1;
-  padding: 5px 12px;
-  background: #ffb600;
-  color: #fff;
-  opacity: 0;
-  -webkit-transform: perspective(1px) scale3d(0, 0, 0);
-  transform: perspective(1px) scale3d(0, 0, 0);
-  transition: all 400ms;
-}
-
-.shuffle-item .project-img-container:hover .gallery-popup .gallery-icon {
-  opacity: 1;
-  -webkit-transform: perspective(1px) scale3d(1, 1, 1);
-  transform: perspective(1px) scale3d(1, 1, 1);
-}
-
-.shuffle-item .project-img-container .project-item-info {
-  position: absolute;
-  top: 50%;
-  margin-top: -10%;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 0 30px;
-  z-index: 1;
-}
-
-.shuffle-item .project-img-container .project-item-info-content {
-  opacity: 0;
-  -webkit-transform: perspective(1px) translate3d(0, 15px, 0);
-  transform: perspective(1px) translate3d(0, 15px, 0);
-  transition: all 400ms;
-}
-
-.shuffle-item
-  .project-img-container
-  .project-item-info-content
-  .project-item-title {
-  font-size: 20px;
-}
-
-.shuffle-item
-  .project-img-container
-  .project-item-info-content
-  .project-item-title
-  a {
-  color: #fff;
-}
-
-.shuffle-item
-  .project-img-container
-  .project-item-info-content
-  .project-item-title
-  a:hover {
-  color: #ffb600;
-}
-
-.shuffle-item .project-img-container .project-item-info-content .project-cat {
-  background: #ffb600;
-  display: inline-block;
-  padding: 2px 8px;
-  font-weight: 700;
-  color: #000;
-  font-size: 10px;
-  text-transform: uppercase;
-}
-
-.shuffle-item .project-img-container:hover .project-item-info-content {
-  opacity: 1;
-  -webkit-transform: perspective(1px) translate3d(0, 0, 0);
-  transform: perspective(1px) translate3d(0, 0, 0);
-}
 
 .general-btn .btn-primary:hover {
   background: #000;
@@ -2236,98 +1800,15 @@ label {
   font-weight: 400;
 }
 
-/* Comments area */
-.comments-area {
-  margin: 40px 0;
-}
 
-.comments-list .comment-content {
-  margin: 15px 0;
-}
-
-.comments-list .comment-reply {
-  color: #303030;
-  font-weight: 400;
-}
-
-.comments-list .comment-reply:hover {
-  color: #ffb600;
-}
-
-.comments-counter {
-  font-size: 18px;
-}
-
-.comments-counter a {
-  color: #323232;
-}
-
-.comments-list {
-  list-style: none;
-  margin: 0;
-  padding: 20px 0;
-}
-
-.comments-list .comment {
-  border-bottom: 1px solid #e7e7e7;
-  padding-bottom: 20px;
-  margin-bottom: 30px;
-}
-
-.comments-list .comment.last {
-  border-bottom: 0;
-  padding-bottom: 0;
-  margin-bottom: 0;
-}
-
-.comments-list img.comment-avatar {
-  width: 84px;
-  height: 84px;
-  margin-right: 30px;
-}
 
 @media (max-width: 575px) {
-  .comments-list img.comment-avatar {
-    width: 40px;
-    height: 40px;
-    margin-right: 25px;
-  }
-}
 
-.comments-list .comment-author {
-  margin-bottom: 0;
-  margin-top: 0;
-  font-weight: 600;
-  font-size: 16px;
-  color: #303030;
-}
 
-.comments-list .comment-date {
-  color: #959595;
-  margin-bottom: 5px;
-  font-size: 12px;
-}
 
-@media (max-width: 575px) {
-  .comments-list .comment-date {
-    float: none !important;
-    display: inline-block;
-  }
 
-  .abu-kullur p {
-    width: 100% !important;
-  }
 
-  .ab-kullur-img img {
-    width: 100%;
-    height: 300px !important;
-    object-fit: cover;
-  }
-
-  .ab-kullur-img img:first-child {
-    margin-bottom: 20px;
-  }
-
+ 
   .plan-proxy {
     padding: 20px;
     position: unset !important;
@@ -2353,31 +1834,7 @@ label {
   }
 }
 
-.comments-reply {
-  list-style: none;
-  margin: 0 0 0 70px;
-}
 
-@media (max-width: 767px) {
-  .comments-reply {
-    margin: 0;
-    padding: 0;
-  }
-}
-.des-mb {
-  margin-bottom: 0.8rem;
-}
-.comments-form {
-  margin-bottom: 0;
-}
-
-.comments-form .title-normal {
-  margin-bottom: 20px;
-}
-
-.comments-form .btn.btn-primary {
-  margin-top: 20px;
-}
 
 /* Sidebar
 ================================================== */
@@ -3807,4 +3264,26 @@ body.mobile-nav-active #mobile-nav-toggle {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+}
+
+.site-overview{
+  background-color: #38484f;
+  padding: 4rem 0;
+  color: #fff;
+}
+
+.overview-list{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.overview-list span{
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.overview-list p{
+  font-size: 1rem;
 }
